Fix picture stretch

--- a/blocks/place/__img/place__img.css
+++ b/blocks/place/__img/place__img.css
@@ -1,4 +1,6 @@
 .place__img {
   width: var(--place-img-width);
   height: auto;
+
+  align-self: flex-start;
 }
